--- a/chatscrum/src/scrumboard/scrumboard.css
+++ b/chatscrum/src/scrumboard/scrumboard.css
@@ -26,17 +26,6 @@ nav{
     justify-content: space-between;
 }
 
-/* #task{
-    padding: 5px;
-    font-weight: 500;
-    box-shadow: 1px 2px 2px gray;
-    color: rpg(16,16,90);
-} */
-
-/* .var{
-    color: black;
-} */
-
 .container{
     display: flex;
     justify-content: space-around; 
@@ -137,4 +126,8 @@ button #add{
     margin-left: 40px;
     margin-top: 30px;
     border-radius: 20px;
+}
+
+.blue{
+    color: darkblue;
 }
